fix the linkedin text overflow by setting the entire list to have a min width of 250px.

--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@ body
 	list-style: none;
 	margin: 10px 0;
 	cursor: pointer;
+	min-width: 250px
 }
 .contactInfo ul li .icon
 {
